add swagger cross platform support
